#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package InterfaceCtlr
#------------------------------------------------------------------------

Package author: Andy Salnikov
Please describe any modifications that you made to the package in the
reverse time order.

Tag V01-03-14	
2015-05-26
- Added --force option to deactivate controller without checking if the pid still exists.
	
Tag: V01-03-13
2015-05-08
- Close JobInfo (python lsf c-api) if none were found. Otherwise connection to lsf server is not 
  properly closed (stuck in CLOSE_WAIT) which caused the ic-controller-mon to run out of file descriptors. 
- smalldata support for irods registration 
	
Tag: V01-03-12 
2015-03-10 Wilko Kroeger
- Added controller for monitoring translation
	
Tag: V01-03-11
2014-07-30 Wilko Kroeger
- The controller will accept an absolute path for the config file

Tag: V01-03-10
2014-07-14 Wilko Kroeger
- Allow to set the resource a file is stored in irods (FileMgrIrods)
- Register an index file (xtc.idx type) in the irods resource specified by the key 
  irodsIdxResource in the fm-irods section (FileMgrRegister)
	
Tag: V01-03-09
2014-07-11 Igor Gaponenko
- forcing the Translator job to dump the configuration file into STDOUT
in TranslatorJobPsana.py

Tag: V01-03-07
2014-06-12 Igor Gaponenko
- configuring psana modules of the Translator via a configuration file rather than
by passing a list of modules in the command line. Fetching the configuration
file location from the database.

Tag: V01-03-06
2014-05-21 Wilko Kroeger
- allow ic-store-files to scan files in <exp>/usr directories. When the usr is scanned
  the hdf5 and xtc folders will be ignored.
- Added option to ignore files whose mtime is more recent than n-hours.
- A few more extra option to ic-store-files.

Tag: V01-03-05
2014-04-30 Wilko Kroeger
- Added new ic-controller that uses psana for the xtc to hdf5 translation 